--- a/style.css
+++ b/style.css
@@ -1,1 +1,67 @@
-Hi
+* {
+  padding: 0;
+  margin: 0;
+  font-family: sans-serif;
+  box-sizing: border-box;
+}
+
+body {
+  padding: 30px 30px;
+  /* background-color: #f3f3f3; */
+}
+
+.header {
+  /* width: 1300px; */
+  margin: 0 auto;
+}
+
+.nav {
+  /* background-color: blue; */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav-logos {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.nav-logo {
+  height: 7rem;
+  display: inline-block;
+  /* margin-left: 5%; */
+}
+
+.nav-logo-title {
+  height: 3rem;
+}
+
+.nav-options {
+  /* background-color: red; */
+  margin-right: 5%;
+  display: flex;
+  /* flex-shrink: 0; */
+}
+
+.nav-link:link,
+.nav-link:visited {
+  font-size: 1.3rem;
+  color: inherit;
+  text-decoration: none;
+  display: inline-block;
+  transition: 0.3s;
+}
+
+.products {
+  padding: 0.8rem 2.8rem;
+  color: #222;
+}
+
+.contactus {
+  padding: 0.8rem 2.8rem;
+  border-radius: 3rem;
+  background-color: #5ec576;
+  color: #222;
+}
